test/tests/stages/14_pointers/invalid_types/extra_credit/compound_multiply_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  identifier(x)
  *=
  const int(2)
  ;
  return
  const int(0)
  ;
  }
